[project]
name = "biostatistik-und-studiendesign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "itables>=2.2.4",
    "jupyter>=1.1.1",
    "kaleido==0.2.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
]
